fixed icons on mobile view

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -62,61 +62,68 @@
     EXPANDABLE WIDGETS AT MOBILE 
     ========================================
     */
-    .widgets .row-column-cell .expandable-widget {
+    .widgets .row .row-column-cell .expandable-widget {
         padding: 0;
     }
-    .widgets .row-column-cell>.expandable-widget:not(.open) header{
+    .widgets .row .row-column-cell .expandable-widget:not(.open) header{
         border:1px solid #336fb8;
         padding: 17px 17px 17px 20px;
         display: block;
         width: auto;
         position: relative;
     }
-    .widgets .row-column-cell .expandable-widget:not(.open) header h2 {        
+    .widgets .row .row-column-cell .expandable-widget:not(.open) header h2 {        
         font-size: 24px;
         vertical-align: middle;
         display:table-cell;
         text-align: left
     }
-    .widgets .row-column-cell>.expandable-widget:not(.open) header .icon {
+    .widgets .row .row-column-cell .expandable-widget:not(.open) header .icon {
         background-color: #fff;
         display:table-cell;
         height: auto;
         margin: 0;
         -webkit-text-fill-color: #C50084;
     }
-    .widgets .row-column-cell>.expandable-widget:not(.open) header .icon [class^="icon-"]:before, [class*=" icon-"]:before{
+    .widgets .row-column-cell .expandable-widget:not(.open) header .icon [class^="icon-"]:before, [class*=" icon-"]:before{
         top:0;
         margin: 0;
         font-size: 30px;
         line-height: initial;
     }
-    .widgets .row .row-column-cell [class^="widget-"] header .icon div svg {
+    .widgets .row .row-column-cell .expandable-widget[class^="widget-"] header .icon div svg {
         height:32px;
         margin:0;
         stroke: #C50084;
+        background-color: #fff
     }
-    .widgets header .icon svg .st0 {
+    .widgets .row .row-column-cell .expandable-widget header .icon svg .st0 {
         fill: #C50084;
     }
-    .widgets .row .row-column-cell [class^="widget-"] header .icon>div:first-child {
+    .widgets .row .row-column-cell .expandable-widget header .icon svg .star {
+        stroke: #C50084;
+    }
+    .widgets .row .row-column-cell .expandable-widget[class^="widget-"] header .icon>div:first-child {
         background-size: cover;
         width: 32px;
         height: 32px;
         background-position: 0 0;
         background-repeat: no-repeat;
-    }
-    .widgets header svg {
+        background-color: #fff;
+        top:0;
+        left:0
+    }   
+    .widgets .row .row-column-cell .expandable-widget header svg {
         background-color: #fff;
         max-width: 30px;
     }
-    .widgets .row-column-cell .expandable-widget:not(.open) section {
+    .widgets .row .row-column-cell .expandable-widget:not(.open) section {
         display: none;
     }
-    .widgets .row-column-cell .expandable-widget>header .expandable {
+    .widgets .row-column-cell .expandable-widget header .expandable {
         display: block;
     }
-    .widgets .row-column-cell .expandable-widget>header .expandable div {
+    .widgets .row-column-cell .expandable-widget header .expandable div {
         width: 15px;
         height: 15px;
         position: absolute;
